docs: 修复接口文档字段缺失
